<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleblock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            tools:text="@string/title1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/totclatitl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/edittx1h"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/totaattedit"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="3"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/edittx1h"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/attenclatitl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/editx2t"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/attencled"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/edittx2h"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/lightred"
            android:gravity="center"
            android:text="@string/buttex1"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/percentitl"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/percenttitl"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/showprcent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="no data"
                android:textColor="@color/white"/>
        </LinearLayout>

        <TextView
            android:id="@+id/remark"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="You have not entered a value yet"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/calcucllast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rem0"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/showatte"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="NO DATA NO CLASS"
                android:textColor="@color/white" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:textColor="@color/white"
            android:text="Powered by haiteku-gun"
            android:gravity="end"
            android:id="@+id/developerd"/>

    </LinearLayout>

</RelativeLayout>